--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
 
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
+    <string-array name="tabs">
+        <item>Tab 1</item>
+        <item>Tab 2</item>
+        <item>Tab 3</item>
+    </string-array>
+    <string name="title_activity_activity_using_tab_library">ActivityUsingTabLibrary</string>
+    <string name="title_activity_third">ThirdActivity</string>
 </resources>
